# Huffman

./: CMakeLists.txt  compression.cpp  compression.h  huffman.cpp  huffmanTesting.cpp
lib/: BinaryTrie.cpp  BinaryTrie.h  BufferedReader.cpp  BufferedReader.h  BufferedWriter.cpp  BufferedWriter.h
